# FL-free-rider-benchmark

./: .gitignore  CITATION.cff  README.md  client_app.py  data_visualization.ipynb  datasets_visualization.ipynb  detection_handler.py  evaluate.ipynb  generate_config.ipynb  generate_config.py  get_attack_names.py  get_detection_names.py  pyproject.toml  run_name.yaml  server_app.py  strategy.py  task.py  test_models.ipynb  train_dagmm.ipynb  train_delta_dagmm.ipynb  train_delta_dagmm_cifar10_10.ipynb  train_delta_dagmm_cifar10_100.ipynb  train_delta_dagmm_mnist_10.ipynb  train_delta_dagmm_mnist_100.ipynb  train_std_dagmm.ipynb  util.py
attacks/: adaptive_attack.py  advanced_delta_weights_attack.py  advanced_free_rider_attack.py  attack_client.py  attack_names.py  fake_label_distribution.py  random_weights_attack.py
bash_scripts/: mnist_delta_weights.sh  run_comparison_runs.sh  run_control_runs.sh  run_experiments.sh
config/: attack_method.yaml  detection_method.yaml  fake_label_distribution.yaml  malicious_clients.yaml
dagmm/: dagmm.py  dagmm_anomaly_threshold.yaml  dagmm_hyperparameters.yaml  download_upload_model.ipynb  model_path.yaml  train_dagmm.ipynb
dagmm/dagmm/: dagmm.py  dagmm_anomaly_threshold.yaml
dagmm/delta_dagmm/: dagmm_anomaly_threshold.yaml  dagmm_hyperparameters.yaml  delta_dagmm.py
dataset_names/: dataset_names.py
detections/: dagmm_detection.py  delta_dagmm_detection.py  detection.py  detection_names.py  fdfl.py  fgfl.py  std_dagmm_detection.py  viceroy_detection.py  wef_detection.py
evaluation/: utils.py
models/: lenet5.py
(+2153 files in other folders)
