[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "experiment"
version = "1.0.0"
description = "A Flower framework for benchmarking free rider attacks and detections."
license = "Apache-2.0"
requires-python = ">=3.10,<4.0"

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.federations]
default = "local-sim"

[tool.poetry.dependencies]
torch = "^2.7.0"
torchvision = "^0.22.0"
wandb = "^0.19.11"
jupyter = "^1.1.1"
toml = "^0.10.2"
scikit-learn = "^1.6.1"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 1.0
fraction-evaluate = 0.0
local-epochs = 1
server-device = "cpu"
use-wandb = false

[tool.poetry.dependencies.flwr]
extras = [ "simulation",]
version = "^1.18.0"

[tool.poetry.dependencies.flwr-datasets]
extras = [ "vision",]
version = "^0.5.0"

[tool.flwr.federations.local-sim.options]
num-supernodes = 100

[tool.flwr.federations.local-sim-gpu.options]
num-supernodes = 100

[tool.hatch.build.targets.wheel]
packages = [ ".",]

[tool.flwr.federations.local-sim.options.backend.client-resources]
num-cpus = 1
num-gpus = 0.0

[tool.flwr.federations.local-sim-gpu.options.backend.client-resources]
num-cpus = 1
num-gpus = 0.041666666666666664
